SmartManufacturing/k8s/gateway_test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dgw-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 9443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
        - "*"
  - port:
      number: 880
      name: http
      protocol: HTTP
    hosts:
      - "*"
